--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ JWT_SECRET_KEY=
 PORT=3000
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
 GEMINI_API_KEY=
+NEXT_PUBLIC_STRIPE_PUBLIC_KEY=
+STRIPE_SECRET_KEY=
