Feat: update page

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.454.0",
     "mongodb": "^6.10.0",
     "nanoid": "^5.0.8",
